토큰 발급 추가
