# app/Http/Controllers/Controller.php
@@ -15,9 +15,24 @@ use Illuminate\Routing\Controller as BaseController;
  *      title="idus API",
  *      version="0.1",
  *      description="
- Request 인증
+ ## Request 인증
  - `/api/token` 엔드포인트에서 인증 토큰을 발급 받을 수 있습니다.
  - Request Header `Authorization` 필드 안에 `bearer <auth-token>` 형태로 인증 토큰을 기입 후 요청해주시면 됩니다.
+
+ ## 유효성 검사 실패
+ - Response Code: 400
+ - Response Body: `ResponseError`
+ ```json
+ {
+    'success': false,
+    'message': '유효성 검사에 실패했습니다.',
+    'errors': {
+        'username': [
+            '이미 존재하는 username 입니다.'
+        ]
+    }
+}
+ ```
 ",
  * )
  */
