# app/Http/Controllers/LoginController.php
@@ -2,7 +2,9 @@
 
 namespace App\Http\Controllers;
 
+use App\Http\Requests\IssueUserAccessTokenRequest;
 use App\Http\Requests\UserRegisterRequest;
+use App\Models\User;
 use App\Services\UserService;
 
 /**
@@ -46,16 +48,6 @@ class LoginController extends Controller
      *              }
      *          )
      *      ),
-     *      @OA\Response(
-     *          response=400,
-     *          description="유효성 검사 실패",
-     *          @OA\JsonContent(
-     *              type="object",
-     *              allOf={
-     *                  @OA\Schema(ref="#/components/schemas/ResponseError")
-     *              }
-     *          )
-     *      ),
      * )
      */
     function register(UserRegisterRequest $request)
@@ -63,5 +55,50 @@ class LoginController extends Controller
         $user = $this->userService->create($request);
 
         return $this->responseObject($user);
+    }
+
+    /**
+     * 토큰 발급
+     *
+     * @OA\Post(
+     *      path="/api/token",
+     *      tags={"Login"},
+     *      description="",
+     *      @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(property="username", type="string"),
+     *              @OA\Property(property="password", type="string", format="password"),
+     *          ),
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="성공",
+     *          @OA\JsonContent(
+     *              type="object",
+     *              allOf={
+     *                  @OA\Schema(ref="#/components/schemas/ResponseObject"),
+     *                  @OA\Schema(
+     *                      type="object",
+     *                      @OA\Property(
+     *                          property="result",
+     *                          type="object",
+     *                          @OA\Property(property="access_token", description="API 접근 토큰", example="1|s3AnvYQ4k4F56JgjNvq163DTDB4csAoDRDknqp8E")
+     *                      )
+     *                  )
+     *              }
+     *          )
+     *      ),
+     * )
+     */
+    function token(IssueUserAccessTokenRequest $request)
+    {
+        $user = User::where("username", $request->get("username"))->first();
+        $token = $this->userService->issueAccessToken("user access token", $user);
+
+        return $this->responseObject([
+            "access_token" => $token->plainTextToken,
+        ]);
     }
 }
